tests/snapshots/examples_fixtures/aoc__2024__Aoc2024Shared.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/Aoc2024Shared.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
