tests/snapshots/examples_fixtures/aoc__2024__Day07Solver.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/Day07Solver.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
