tests/snapshots/examples_fixtures/aoc__2024__day01_fast.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day01_fast.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
