tests/snapshots/examples_fixtures/aoc__2024__day07.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day07.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
